Sun Oct 14 02:39:43 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.am (AM_CPPFLAGS): Fix SOELIM definition.
	* src/Makefile.in: Regenerate.

Sun Oct 14 01:20:07 BST 2007  Colin Watson  <cjwatson@debian.org>

	* .bzrignore: Restore some ignores needed in intl/.

Sun Oct 14 01:16:23 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add most files generated by autogen.sh to revision control, as it
	makes it easier to keep track of what the Autotools are doing.
	autom4te.cache and po/Makevars.template are explicitly still
	ignored; the former is junk and the latter is only necessary in the
	gettext-tools package.

	* ABOUT-NLS, aclocal.m4, config.h.in, configure, intl/ChangeLog,
	  intl/Makefile.in, intl/VERSION, intl/bindtextdom.c,
	  intl/config.charset, intl/dcgettext.c, intl/dcigettext.c,
	  intl/dcngettext.c, intl/dgettext.c, intl/dngettext.c,
	  intl/eval-plural.h, intl/explodename.c, intl/export.h,
	  intl/finddomain.c, intl/gettext.c, intl/gettextP.h, intl/gmo.h,
	  intl/hash-string.c, intl/hash-string.h, intl/intl-compat.c,
	  intl/intl-exports.c, intl/l10nflist.c, intl/langprefs.c,
	  intl/libgnuintl.h.in, intl/loadinfo.h, intl/loadmsgcat.c,
	  intl/localcharset.c, intl/localcharset.h, intl/locale.alias,
	  intl/localealias.c, intl/localename.c, intl/lock.c, intl/lock.h,
	  intl/log.c, intl/ngettext.c, intl/os2compat.c, intl/os2compat.h,
	  intl/osdep.c, intl/plural-exp.c, intl/plural-exp.h, intl/plural.c,
	  intl/plural.y, intl/printf-args.c, intl/printf-args.h,
	  intl/printf-parse.c, intl/printf-parse.h, intl/printf.c,
	  intl/ref-add.sin, intl/ref-del.sin, intl/relocatable.c,
	  intl/relocatable.h, intl/textdomain.c, intl/vasnprintf.c,
	  intl/vasnprintf.h, intl/vasnwprintf.h, intl/version.c,
	  intl/wprintf-parse.h, intl/xsize.h, m4/codeset.m4, m4/gettext.m4,
	  m4/glibc2.m4, m4/glibc21.m4, m4/iconv.m4, m4/intdiv0.m4,
	  m4/intl.m4, m4/intldir.m4, m4/intmax.m4, m4/inttypes-pri.m4,